--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <!-- Navigation -->
     <header class="header">
         <div class="container header__container">
-            <nav class="header__nav">
+            <nav class="nav">
                 <a class="logo" href="./index.html">
                     Web<span class="logo__title--black">Studio</span>
                 </a>
 
-                <ul class="header__nav-list">
-                    <li class="header__nav-item">
-                        <a class="header__nav-link header__nav-link--current" href="./index.html">Студия</a>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link nav__link--current" href="./index.html">Студия</a>
                     </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="./portfolio.html">Портфолио</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="">Контакты</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -69,9 +69,9 @@
             </div>
         </section>
         <!-- Advantagies -->
-        <section class="features">
+        <section class="advantagies">
             <div class="container">
-                <ul class="features__list">
+                <ul class="features">
                     <li class="features__item">
                         <div class="features__thumb">
                             <svg width="70" height="70">
@@ -120,10 +120,10 @@
             </div>
         </section>
         <!-- Work examples -->
-        <section class="examples">
+        <section class="section">
             <div class="container">
                 <h2 class="title">Чем мы занимаемся</h2>
-                <ul class="examples__list">
+                <ul class="examples">
                     <li class="examples__item">
                         <img src="./images/placeholder.jpg" alt="laptop" width="370">
                         <p class="examples__text">
@@ -146,14 +146,14 @@
             </div>
         </section>
         <!-- Employees -->
-        <section class="employees">
+        <section class="section employees">
             <div class="container">
                 <h2 class="title">Наша команда</h2>
-                <ul class="employees__list">
-                    <li class="employees__item">
-                        <img class="employees__pic" src="./images/employee1.jpg" alt="employee" width="270">
-                        <h3 class="employees__name">Игорь Демьяненко</h3>
-                        <p class="employees__position">Product Designer</p>
+                <ul class="team">
+                    <li class="team__item">
+                        <img class="team__photo" src="./images/employee1.jpg" alt="employee" width="270">
+                        <h3 class="team__name">Игорь Демьяненко</h3>
+                        <p class="team__position">Product Designer</p>
                         <ul class="socials">
                             <li class="socials__item">
                                 <a class="socials__link" href="">
@@ -185,10 +185,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="employees__item">
-                        <img class="employees__pic" src="./images/emloyee2.jpg" alt="employee" width="270">
-                        <h3 class="employees__name">Ольга Репина</h3>
-                        <p class="employees__position">Frontend Developer</p>
+                    <li class="team__item">
+                        <img class="team__photo" src="./images/emloyee2.jpg" alt="employee" width="270">
+                        <h3 class="team__name">Ольга Репина</h3>
+                        <p class="team__position">Frontend Developer</p>
                         <ul class="socials">
                             <li class="socials__item">
                                 <a class="socials__link" href="">
@@ -220,10 +220,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="employees__item">
-                        <img class="employees__pic" src="./images/employee3.jpg" alt="employee" width="270">
-                        <h3 class="employees__name">Николай Тарасов</h3>
-                        <p class="employees__position">Marketing</p>
+                    <li class="team__item">
+                        <img class="team__photo" src="./images/employee3.jpg" alt="employee" width="270">
+                        <h3 class="team__name">Николай Тарасов</h3>
+                        <p class="team__position">Marketing</p>
                         <ul class="socials">
                             <li class="socials__item">
                                 <a class="socials__link" href="">
@@ -255,10 +255,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="employees__item">
-                        <img class="employees__pic" src="./images/employee4.jpg" alt="employee" width="270">
-                        <h3 class="employees__name">Михаил Ермаков</h3>
-                        <p class="employees__position">UI Designer</p>
+                    <li class="team__item">
+                        <img class="team__photo" src="./images/employee4.jpg" alt="employee" width="270">
+                        <h3 class="team__name">Михаил Ермаков</h3>
+                        <p class="team__position">UI Designer</p>
                         <ul class="socials">
                             <li class="socials__item">
                                 <a class="socials__link" href="">
@@ -294,10 +294,10 @@
             </div>
         </section>
         <!-- Clients -->
-        <section class="clients">
+        <section class="section">
             <div class="container">
                 <h2 class="title">Постоянные клиенты</h2>
-                <ul class="clients__list">
+                <ul class="clients">
                     <li class="clients__item">
                         <a class="clients__link" href="">
                             <svg width="106" height="60">
@@ -352,15 +352,15 @@
                     Web<span class="logo__title--white">Studio</span>
                 </a>
                 <address>
-                    <ul class="footer__contacts-list">
-                        <li class="footer__item">
-                            <p class="footer__text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="address">
+                        <li class="address__item">
+                            <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class="address__item">
+                            <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="tel:380961111111">+38 096 111 11 11</a>
+                        <li class="address__item">
+                            <a class="address__link" href="tel:380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
