--- a/portfolio.html
+++ b/portfolio.html
@@ -20,20 +20,20 @@
     <!-- Navigation -->
     <header class="header header__line">
         <div class="container header__container">
-            <nav class="header__nav">
+            <nav class="nav">
                 <a class="logo" href="./index.html">
                     Web<span class="logo__title--black">Studio</span>
                 </a>
 
-                <ul class="header__nav-list">
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="./index.html">Студия</a>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link" href="./index.html">Студия</a>
                     </li>
-                    <li class="header__nav-item ">
-                        <a class="header__nav-link header__nav-link--current" href="./portfolio.html">Портфолио</a>
+                    <li class="nav__item ">
+                        <a class="nav__link nav__link--current" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class="header__nav-item">
-                        <a class="header__nav-link" href="">Контакты</a>
+                    <li class="nav__item">
+                        <a class="nav__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -63,7 +63,7 @@
     <div class="line"></div>
     <main>
         <!-- Main content -->
-        <section class="portfolio">
+        <section class="section">
             <div class="container">
                 <!-- Filter of the main content -->
                 <ul class="filters">
@@ -84,7 +84,7 @@
                     </li>
                 </ul>
                 <!-- Portfolio examples -->
-                <ul class="portfolio__list">
+                <ul class="portfolio">
                     <li class="portfolio__item">
                         <a class="portfolio__link" href="">
                             <div class="portfolio__overlay-thumb">
@@ -243,15 +243,15 @@
                     Web<span class="logo__title--white">Studio</span>
                 </a>
                 <address>
-                    <ul class="footer__contacts-list">
-                        <li class="footer__item">
-                            <p class="footer__text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="address">
+                        <li class="address__item">
+                            <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class="address__item">
+                            <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class="footer__item">
-                            <a class="footer__link" href="tel:380961111111">+38 096 111 11 11</a>
+                        <li class="address__item">
+                            <a class="address__link" href="tel:380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
